moving app title to the right side

--- a/projects/anviltech/wuf-ang-layout/src/lib/layout-components/toolbar/toolbar.component.html
+++ b/projects/anviltech/wuf-ang-layout/src/lib/layout-components/toolbar/toolbar.component.html
@@ -8,11 +8,11 @@
         <div class="toolbar-content">
 
             <div class="left-side">
-                <ng-content select="[toolbarContent]"></ng-content>
+                <ng-content select="[toolbarLeft]"></ng-content>
             </div>
 
             <div class="right-side">
-                <ng-content select="[utilities]"></ng-content>
+                <ng-content select="[toolbarRight]"></ng-content>
             </div>
 
         </div>
