--- a/projects/anviltech/wuf-ang-layout/src/lib/layout-components/content/content-header/content-header.component.html
+++ b/projects/anviltech/wuf-ang-layout/src/lib/layout-components/content/content-header/content-header.component.html
@@ -5,11 +5,11 @@
 
 <div class="content-header">
     <kg-toolbar>
-        <ng-container toolbarContent>
-            <ng-content select="[toolbarContent]"></ng-content>
+        <ng-container toolbarLeft>
+            <ng-content select="[toolbarLeft]"></ng-content>
         </ng-container>
-        <ng-container utilities>
-            <ng-content select="[utilities]"></ng-content>
+        <ng-container toolbarRight>
+            <ng-content select="[toolbarRight]"></ng-content>
         </ng-container>
     </kg-toolbar>
     <ng-content select="[otherContent]"></ng-content>
