--- a/src/app/internal/layouts/main/main.component.scss
+++ b/src/app/internal/layouts/main/main.component.scss
@@ -3,28 +3,11 @@
  * Licensed under the MIT Open Source: https://opensource.org/licenses/MIT
  */
 
-// STILL theme
-$kg-header-still-width: 90px;
-$kg-header-still-top-padding: 18px;
-
 .util-wrap {
     height: var(--wuf-header-height);
     position: relative;
     display: inline-block;
-    padding: $kg-header-still-top-padding 0 0 $kg-header-still-width;
-}
-
-.theme-still-wrap {
-    display: inline-block;
-    background-image: linear-gradient(120deg, transparent 0px, transparent 30px, var(--wuf-color-primary) 30px, var(--wuf-color-primary) 75px, transparent 75px, transparent 100%);
-    height: var(--wuf-header-height);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: $kg-header-still-width;
-    padding-top: $kg-header-still-top-padding;
-    padding-right: 5px;
-    text-align: center;
+    padding: 18px 0 0 18px;
 }
 
 kg-drawer {
