--- a/src/app/other/settings/settings.component.html
+++ b/src/app/other/settings/settings.component.html
@@ -5,11 +5,11 @@
 
 <kg-content-header>
     <!-- insert page header content here -->
-    <ng-container toolbarContent>
+    <ng-container toolbarLeft>
         <kg-breadcrumb></kg-breadcrumb>
     </ng-container>
 
-    <ng-container utilities>
+    <ng-container toolbarRight>
         <!--page-level utilities here-->
     </ng-container>
 </kg-content-header>
