--- a/src/app/pages/branding-themes/themes/themes.component.html
+++ b/src/app/pages/branding-themes/themes/themes.component.html
@@ -5,12 +5,12 @@
 
 <kg-content-header>
     <!-- insert page header content here -->
-    <ng-container toolbarContent>
+    <ng-container toolbarLeft>
         <kg-breadcrumb
             [items]="[{ link: '/', label: 'Introduction' }, { link: '/themes', label: 'Branding & Themes' }, { link: null, label: 'KION Theme System', active: true }]"></kg-breadcrumb>
     </ng-container>
 
-    <ng-container utilities>
+    <ng-container toolbarRight>
         <!--page-level utilities here-->
     </ng-container>
 </kg-content-header>
