--- a/src/app/pages/components/breadcrumb/breadcrumb.component.html
+++ b/src/app/pages/components/breadcrumb/breadcrumb.component.html
@@ -5,11 +5,11 @@
 
 <kg-content-header>
     <!-- insert page header content here -->
-    <ng-container toolbarContent>
+    <ng-container toolbarLeft>
         <kg-breadcrumb [items]="[{ link: '/', label: 'Introduction' }, { link: '/components', label: 'Components' }, { link: null, label: 'Breadcrumb', active: true }]"></kg-breadcrumb>
     </ng-container>
 
-    <ng-container utilities>
+    <ng-container toolbarRight>
         <!--page-level utilities here-->
     </ng-container>
 </kg-content-header>
@@ -26,10 +26,10 @@
             <p>Example breadcrumb trail inside a page-level toolbar:</p>
 
             <kg-toolbar>
-                <ng-container toolbarContent>
+                <ng-container toolbarLeft>
                     <kg-breadcrumb [items]="[{ link: '/', label: 'Introduction' }, { link: '/components', label: 'Components' }, { link: null, label: 'Breadcrumb', active: true }]"></kg-breadcrumb>
                 </ng-container>
-                <ng-container utilities>
+                <ng-container toolbarRight>
                 </ng-container>
             </kg-toolbar>
         </div>
