--- a/src/app/pages/components/forms/forms.component.html
+++ b/src/app/pages/components/forms/forms.component.html
@@ -5,12 +5,12 @@
 
 <kg-content-header>
     <!-- insert page header content here -->
-    <ng-container toolbarContent>
+    <ng-container toolbarLeft>
         <kg-breadcrumb
             [items]="[{ link: '/', label: 'Introduction' }, { link: '/components', label: 'Components' }, { link: null, label: 'Material Cards', active: true }]"></kg-breadcrumb>
     </ng-container>
 
-    <ng-container utilities>
+    <ng-container toolbarRight>
         <!--page-level utilities here-->
         <button mat-raised-button (click)="openDrawer()">Show form options</button>
     </ng-container>
