--- a/src/app/pages/components/switch/switch.component.html
+++ b/src/app/pages/components/switch/switch.component.html
@@ -5,12 +5,12 @@
 
 <kg-content-header>
     <!-- insert page header content here -->
-    <ng-container toolbarContent>
+    <ng-container toolbarLeft>
         <kg-breadcrumb
             [items]="[{ link: '/', label: 'Introduction' }, { link: '/components', label: 'Components' }, { link: null, label: 'Switch', active: true }]"></kg-breadcrumb>
     </ng-container>
 
-    <ng-container utilities>
+    <ng-container toolbarRight>
         <!--page-level utilities here-->
     </ng-container>
 </kg-content-header>
