--- a/src/app/pages/components/toolbar/toolbar.component.html
+++ b/src/app/pages/components/toolbar/toolbar.component.html
@@ -5,12 +5,12 @@
 
 <kg-content-header>
     <!-- insert page header content here -->
-    <ng-container toolbarContent>
+    <ng-container toolbarLeft>
         <kg-breadcrumb
             [items]="[{ link: '/', label: 'Introduction' }, { link: '/components', label: 'Components' }, { link: null, label: 'Toolbar', active: true }]"></kg-breadcrumb>
     </ng-container>
 
-    <ng-container utilities>
+    <ng-container toolbarRight>
         <!--page-level utilities here-->
     </ng-container>
 </kg-content-header>
@@ -28,11 +28,11 @@
             <p>Example breadcrumb trail inside a toolbar:</p>
 
             <kg-toolbar>
-                <ng-container toolbarContent>
+                <ng-container toolbarLeft>
                     <kg-breadcrumb
                         [items]="[{ link: '/', label: 'Introduction' }, { link: '/components', label: 'Components' }, { link: null, label: 'Breadcrumb', active: true }]"></kg-breadcrumb>
                 </ng-container>
-                <ng-container utilities>
+                <ng-container toolbarRight>
                     [utility links here]
                 </ng-container>
             </kg-toolbar>
