remove Dematic name from default copyright config property

--- a/src/app/pages/app-setup/configuration/configuration.component.html
+++ b/src/app/pages/app-setup/configuration/configuration.component.html
@@ -265,7 +265,7 @@
                 <tr>
                     <td class="prop-name">copyrightName</td>
                     <td class="prop-type"><code>string</code></td>
-                    <td class="prop-default">'Dematic, Inc.'</td>
+                    <td class="prop-default">empty string</td>
                     <td class="prop-description">The name to display with date for copyright info. Copyright info
                         typically displays in the sidebar footer. If navigation is set to display at the top, however,
                         copyright data may not be displayed.
