--- a/src/app/pages/components/navigation-footer/navigation-footer.component.html
+++ b/src/app/pages/components/navigation-footer/navigation-footer.component.html
@@ -115,10 +115,7 @@
             <h4>Copyright Name</h4>
 
             <p>If you want to only change the company name used for the copyright info but keep the
-                algorithmically-generated date, you can use the "copyrightName" attribute to pass the company name. It
-                is recommended to use the name of the KION subsidiary here and <strong>NOT</strong> the name of the
-                theme, which may be associated with a customer brand. For example, if we display a Wal-Mart theme, the
-                copyright name must remain "Dematic, Inc."</p>
+                algorithmically-generated date, you can use the "copyrightName" attribute to pass the company name.</p>
 
             <p>Note: It's recommended to pass copyrightName via <a routerLink="/setup/configuration">configuration
                 service</a> and <em>not</em> hard code the value as a string as in the following example.</p>
